--- a/project2/styles.css
+++ b/project2/styles.css
@@ -158,6 +158,7 @@
 .story-page{
   background: #08243E;
   background: linear-gradient(180deg, rgba(8, 36, 62, 1) 0%, rgba(14, 66, 89, 1) 50%);
+  overflow: hidden;
 }
 
 .quote-text-howl {
@@ -544,7 +545,6 @@
   filter: brightness(80%);
 }
 
-
 .quote-text-end {
   position: absolute;
   top: 4%;
@@ -562,7 +562,7 @@
 .end-btn-img {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 40%;
   transform: translateX(-50%);
   text-align: center;
   text-decoration: none;
@@ -661,3 +661,272 @@
   font-style: normal;
 }
 
+/* =========================
+   RESPONSIVE STYLES
+   ========================= */
+
+@media screen and (max-width: 768px) {
+  .cloud {  
+  position: absolute; 
+  top: 0;             
+  width: auto;       
+  height: 115vh;
+  object-fit: cover; 
+  opacity: 0.95; 
+  z-index: 3; 
+}
+  
+  .cloud-left {
+    top: -9%;  
+    right:-35%;
+    transform: translateX(0);
+    animation: moveLeftCloud 5.3s ease-in-out forwards;
+  }
+
+  .cloud-right {
+    top: -9%;     
+    left: -35%;
+    transform: translateX(0);
+    animation: moveRightCloud 5.3s ease-in-out forwards;
+  }
+
+.poster-row {
+  display: flex;
+  flex-wrap: wrap;           
+  justify-content: center;   
+  gap: 20px;                
+  width: 100%;
+  margin-top: 10%;
+}
+
+#selection {
+  display: flex;                   
+  flex-direction: column;           
+  align-items: center;             
+  gap: 20px;                        
+  padding-top: 3%;                 
+  padding-bottom: 10%;             
+  text-align: center;
+  background-image: url(images/Spirited\ Away_43.jpg);
+  background-size: cover;
+  background-position: bottom;
+  width: 100%;
+  height: 100vh; 
+  position: relative;                  
+}
+
+.movie-info{
+  justify-content: center;
+  text-align: center;
+}
+
+/* HOWL PAGE */
+.story-page{
+  position: relative;
+  height: auto;       
+  overflow: hidden;  
+  }
+
+.quote-text-howl {
+  position: absolute;
+  left: 50%;
+  top: 770px;
+  transform: translateX(-50%);
+  z-index: 2;
+  color: white;
+  text-align: center;
+  font-size: 45px;
+  width: 90%;           
+  max-width: none;
+  line-height: 1.2;
+  overflow-wrap: break-word;
+  margin: 0;
+  overflow: hidden;
+}
+
+#movie-detail{
+  display: flex;                  
+  align-items: flex-start;        
+  gap: 40px;                     
+  padding: 5% 10%;                
+  flex-wrap: wrap;                
+  color: white;
+  background-color: transparent;
+  justify-content: center;
+}
+
+#howl-story .scene-text-top{
+  position: absolute;
+  top: 50%;
+  right: 2%;
+  width: 50%;
+  text-align: right;
+  font-size: 40px;
+  line-height: 1.2;
+  color: white;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  z-index: 3;
+  font-size: 33px;
+}
+
+#howl-story .scene-text-bottom {
+  position: absolute;
+  bottom: 2%;
+  left: 50%;             
+  transform: translateX(-50%); 
+  width: 80%;            
+  text-align: center;        
+  font-size: 40px;
+  line-height: 1.2;
+  color: white;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  z-index: 3;
+  font-size: 33px;
+}
+
+/* totoro page */
+.quote-text-totoro{
+ position: absolute;
+  left: 50%;
+  top: 20px;
+  transform: translateX(-50%);
+  z-index: 2;
+  color: white;
+  text-align: center;
+  font-size: 45px;
+  width: 90%;           
+  max-width: none;
+  line-height: 1.2;
+  overflow-wrap: break-word;
+  margin: 0;
+  overflow: hidden;
+}
+
+#totoro-story .scene-text-top-left{
+   position: absolute;
+  top: 10%;
+  left: 4%;
+  width: 27%;
+  text-align: left;
+  font-size: 40px;
+  line-height: 1.2;
+  color: white;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  z-index: 3;
+  font-size: 33px;
+}
+
+#totoro-story .scene-text-bottom{
+position: absolute;
+  bottom: 6%;
+  right: 2%;
+  width: 35%;
+  text-align: right;
+  font-size: 40px;
+  line-height: 1.2;
+  color: white;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  z-index: 3;
+  font-size: 33px;
+}
+
+#totoro-story .scene-text-centered{
+  position: absolute;
+  bottom: 4%;
+  left: 50%;                        
+  transform: translateX(-50%);     
+  width: 70%;                     
+  text-align: center;
+  font-size: 40px;
+  line-height: 1.2;
+  color: white;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  z-index: 3;
+  font-size: 33px;
+}
+
+#totoro-story .scene-text-bottom-left{
+  position: absolute;
+  bottom: 6%;
+  left: 2%;
+  width: 35%;
+  text-align: rigleftht;
+  font-size: 40px;
+  line-height: 1.2;
+  color: white;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  z-index: 3;
+  font-size: 33px;
+}
+
+/* Each Story Panel */
+.story-scene {
+    height: auto;         
+    flex-direction: column;
+    padding: 10px 0;    
+  }
+
+  .scene-img {
+    height: auto;           /* scale naturally with image */
+    max-height: 80vh;       /* optional max to prevent huge images */
+  }
+
+  .story-scene.alt {
+    flex-direction: column; /* stack side images vertically */
+    gap: 20px;
+  }
+
+  .side-img, .swap {
+    width: 90%;             /* fill most of mobile width */
+  }
+
+  .side-text {
+    width: 90%;
+    font-size: 32px;
+  }
+
+
+.end-btn-page-howl-img img {
+  width: auto;
+  height: 170px;
+  margin-bottom: 10px;
+  border-radius: 12px;
+}
+
+.end-btn-page-totoro-img img {
+  width: auto;
+  height: 170px;
+  margin-bottom: 10px;
+  border-radius: 12px;
+}
+
+.end-btn-container {
+  top: 75%;       
+  left: 50%;          
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+  gap: 20px;          
+  z-index: 10;  
+}
+
+#heading-quote .intro-image-end{
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+  }
+}
+
+.quote-text-end {
+  position: absolute;
+  top: 4%;
+  left: 50%;                        
+  transform: translateX(-50%);     
+  width: 80%;                     
+  text-align: center;
+  font-size: 40px;
+  line-height: 1.2;
+  color: white;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
+  z-index: 3;
+}
